[build-system]
requires = ["setuptools", "wheel", "Cython"]

[project]
name = "spinorama"
description = "Spinorama computes speaker measurements"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL"
authors = [
    { name = "Pierre Aubert", email = "pierre0aubert@gmail.com" },
]

[project.urls]
Homepage = "https://www.spinorama.org"
API = "https://api.spinorama.org"
Documentation = "https://github.com/pierreaubert/spinorama/tree/master/tutorial"

[tool.pyright]
include = [".", "src", "tests"]
ignore = ["book", "experimentals", "datas/measurements", "datas/eq", "datas/pictures"]
venvPath = './.venv'
typeCheckingMode = 'basic'
pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "datas/measurements",
    "docs",
    "build"
]
extend-ignore = [
    "E203"
]

[tool.ruff]
line-length = 100

lint.select = ["N", "YTT", "S", "B", "FBT", "EM", "ISC", "EXE", "G", "Q", "T20", "SIM", "PD", "PL", "TRY", "NPY", "RUF"]
lint.ignore = [
       "PLR",
       "T20",
       "ISC001",
       "FBT001",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["N", "YTT", "S", "B", "FBT", "EM", "ISC", "EXE", "G", "Q", "T20", "SIM", "PD", "PL", "TRY", "NPY", "RUF"]
lint.unfixable = []
